fix: x402 metadata
